[tool.ruff]
line-length = 98

[tool.black]
line-length = 98

[tool.poetry]
name = "pytest-hot-reloading"
version = "0.1.0-alpha.5"
description = ""
authors = ["James Hutchison <jamesghutchison@proton.me>"]
readme = "README.md"
packages = [{ include = "pytest_hot_reloading" }]

[tool.poetry.dependencies]
python = "^3.10"
jurigged = "^0.5.5"
cachetools = "^5.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ruff = "^0.0.261"
black = "^23.3.0"
pytest = "^7.2.2"
megamock = "^0.1.0b3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p pytest_hot_reloading.plugin -p megamock.plugins.pytest"
